# enum-mapping

./: .gitignore  Cargo.toml  Readme.md
enum-mapping-macro/: Cargo.toml
enum-mapping-macro/src/: derive.rs  enum_descriptor.rs  lib.rs
enum-mapping-usage/: Cargo.toml
enum-mapping-usage/src/: main.rs
tests/fails/: e8_not_fully_covered.rs  e8_not_fully_covered.stderr
