[package]
name = "enum-mapping-macro"
description = "Maps enum variants to numbers and viceversa"
license = "BSD-2-Clause"
homepage = "https://github.com/iceseyes/enum-mapping"
repository = "https://github.com/iceseyes/enum-mapping"
readme = "../Readme.md"
keywords = ["macro", "enum", "mapping", "from", "try_from"]
categories = ["development-tools"]
edition = "2021"
version = "0.1.0"

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = { version = "2.0.75", features = ["full", "extra-traits"] }

[lib]
proc-macro = true
